# example-poetry-optional-script-bug

./: LICENSE  README.md  pyproject.toml
example/: config.py  hi.py  hi_decouple.py
