[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bug-example"
version = "0.1.0"
description = "For demonstrating an issue with poetry optional scripts"
authors = ["Michael Smith"]
readme = "README.md"
packages = [{include = "example"}]

[tool.poetry.dependencies]
python = "^3.12"
python-decouple = {version = "^3.8", optional = true}

[tool.poetry.extras]
cfg = ["python-decouple"]

[tool.poetry.scripts]
hello = "example.hi:main"
hello-decouple = { reference = "example.config:main", extras = ["cfg"], type = "console" }
